--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "commitlint": {
     "extends": ["@commitlint/config-conventional"]
   },
-  "release": {
+  "release_version": {
     "branches": [
       "main",
       {
@@ -52,8 +52,30 @@
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "pnpm version ${nextRelease.version} --no-git-tag-version"
+        }
+      ],
       "@semantic-release/github"
     ]
   },
-  "dependencies": {}
+  "release_publish": {
+    "branches": [
+      "main",
+      {
+        "name": "next",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "pnpm publish --access public --tag ${nextRelease.channel} --no-git-checks"
+        }
+      ]
+    ]
+  }
 }
