--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morpho-org/blue-api-sdk",
-  "version": "1.12.5-alpha.0",
+  "version": "1.12.4",
   "author": "Morpho Association <contact@morpho.org>",
   "type": "module",
   "main": "src/index.ts",
