--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   push:
+    tags-ignore:
+      - '**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
