--- a/packages/morpho-ts/package.json
+++ b/packages/morpho-ts/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@morpho-org/morpho-ts",
+  "description": "TypeScript package to handle all things time & format-related.",
   "version": "1.12.4",
   "author": "Morpho Association <contact@morpho.org>",
+  "contributors": ["Rubilmax <rmilon@gmail.com>"],
+  "repository": "github:morpho-org/sdks",
+  "homepage": "https://github.com/morpho-org/sdks",
+  "bugs": {
+    "url": "https://github.com/morpho-org/sdks/issues",
+    "email": "contact@morpho.org"
+  },
   "license": "MIT",
   "main": "src/index.ts",
   "files": ["lib"],
