--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "@morpho-org/sdks",
   "version": "0.0.0",
   "description": "Collection of SDKs to ease interactions with the Morpho protocol and Morpho Vaults",
-  "repository": "git@github.com:morpho-org/sdks.git",
   "author": "Morpho Association <contact@morpho.org>",
+  "contributors": ["Rubilmax <rmilon@gmail.com>"],
+  "repository": "github:morpho-org/sdks",
+  "homepage": "https://github.com/morpho-org/sdks",
+  "bugs": {
+    "url": "https://github.com/morpho-org/sdks/issues",
+    "email": "contact@morpho.org"
+  },
   "license": "MIT",
   "type": "module",
   "private": true,
@@ -23,13 +29,14 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@semantic-release/exec": "^6.0.3",
     "@vitest/coverage-v8": "^2.1.3",
+    "conventional-recommended-bump": "^10.0.0",
     "dotenv-cli": "^7.4.2",
     "happy-dom": "^15.7.4",
     "husky": "^9.1.6",
-    "lerna": "^8.1.8",
     "lint-staged": "^15.2.10",
     "semantic-release": "^24.1.2",
     "semantic-release-monorepo": "^8.0.2",
+    "semver": "^7.6.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.3"
   },
