fix(publish): checkout all

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          # Fetch all history so that we can determine the version to release.
+          fetch-depth: 0 
 
       - uses: pnpm/action-setup@v4
 
