--- a/packages/simulation-sdk-wagmi/package.json
+++ b/packages/simulation-sdk-wagmi/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@morpho-org/simulation-sdk-wagmi",
+  "description": "Wagmi-based extension of `@morpho-org/simulation-sdk` that exports Wagmi (React) hooks to fetch simulation states.",
   "version": "1.12.4",
   "author": "Morpho Association <contact@morpho.org>",
+  "contributors": ["Rubilmax <rmilon@gmail.com>"],
+  "repository": "github:morpho-org/sdks",
+  "homepage": "https://github.com/morpho-org/sdks",
+  "bugs": {
+    "url": "https://github.com/morpho-org/sdks/issues",
+    "email": "contact@morpho.org"
+  },
   "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
