--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@morpho-org/blue-sdk",
+  "description": "Framework-agnostic package that defines Morpho-related entity classes (such as `Market`, `Token`, `Vault`).",
   "version": "1.12.4",
   "author": "Morpho Association <contact@morpho.org>",
+  "contributors": ["Rubilmax <rmilon@gmail.com>"],
+  "repository": "github:morpho-org/sdks",
+  "homepage": "https://github.com/morpho-org/sdks",
+  "bugs": {
+    "url": "https://github.com/morpho-org/sdks/issues",
+    "email": "contact@morpho.org"
+  },
   "license": "MIT",
   "type": "module",
   "main": "src/index.ts",
