--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@vitest/coverage-v8": "^2.1.3",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
+    "conventional-changelog-writer": "^8.0.0",
     "conventional-recommended-bump": "^10.0.0",
     "dotenv-cli": "^7.4.2",
     "happy-dom": "^15.7.4",
