ci(publish): divide & conquer

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,10 +23,12 @@ jobs:
     secrets: inherit
 
   publish:
+    if: github.ref_name == 'main' || github.ref_name == 'next'
+
     # needs:
-      # - lint
-      # - build
-      # - test
+    #   - lint
+    #   - build
+    #   - test
 
     uses: ./.github/workflows/publish.yml
     secrets: inherit
