--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@actions/core": "^1.11.1",
     "@biomejs/biome": "^1.9.3",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
