--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,32 @@ on:
   workflow_call:
 
 jobs:
-  packages:
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        package:
+          - test
+          - test-viem
+          - test-ethers
+          - test-wagmi
+
+          - morpho-ts
+          - morpho-test
+
+          - blue-api-sdk
+          - blue-sdk
+          - blue-sdk-ethers
+          - blue-sdk-viem
+          - blue-sdk-wagmi
+
+          - simulation-sdk
+          - simulation-sdk-wagmi
+          - bundler-sdk-viem
+
+          - liquidation-sdk-viem
+
+    name: "@morpho-org/${{ matrix.package }}"
     runs-on: ubuntu-latest
 
     steps:
@@ -19,4 +44,4 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm -r --parallel --no-reporter-hide-prefix build
+      - run: pnpm --filter @morpho-org/${{ matrix.package }} build
