--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,31 @@ on:
 
 jobs:
   publish:
+    strategy:
+      fail-fast: false
+      matrix:
+        package:
+          - test
+          - test-viem
+          - test-ethers
+          - test-wagmi
+
+          - morpho-ts
+          - morpho-test
+
+          - blue-api-sdk
+          - blue-sdk
+          - blue-sdk-ethers
+          - blue-sdk-viem
+          - blue-sdk-wagmi
+
+          - simulation-sdk
+          - simulation-sdk-wagmi
+          - bundler-sdk-viem
+
+          - liquidation-sdk-viem
+
+    name: "@morpho-org/${{ matrix.package }}"
     runs-on: ubuntu-latest
 
     steps:
@@ -25,12 +50,26 @@ jobs:
 
       - run: pnpm install
 
-      # First, set version of each package to the latest tagged so they are referenced correclty in dependencies.
-      - run: pnpm -r --parallel --no-reporter-hide-prefix -c exec 'node ../../scripts/release/version.js'
+      # First, set version of each package to the latest tagged so they are referenced correctly in dependencies.
+      - run: pnpm -r -c exec 'node ../../scripts/release/version.js'
+
+      - id: release
+        run: node ../../scripts/release/publish.js
+        working-directory: packages/${{ matrix.package }}
+
+      - run: pnpm version ${{ steps.release.outputs.version }} --no-git-tag-version
+        working-directory: packages/${{ matrix.package }}
+        if: steps.release.outputs.version
 
       - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+        if: steps.release.outputs.version
 
-      - run: pnpm -r --parallel --no-reporter-hide-prefix -c exec 'node ../../scripts/release/publish.js'
+      - run: pnpm publish --no-git-checks --access public --tag ${{ steps.release.outputs.channel }}
+        working-directory: packages/${{ matrix.package }}
+        if: steps.release.outputs.version
+
+      - run: gh release create ${{ steps.release.outputs.tag }} --notes '${{ steps.release.outputs.changelog }}' --title '${{ steps.release.outputs.tag }}' ${{ steps.release.outputs.channel == 'latest' && '--latest' || '--prerelease' }}
+        if: steps.release.outputs.version
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
