--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,17 +54,14 @@ jobs:
         run: node ../../scripts/release/publish.js
         working-directory: packages/${{ matrix.package }}
 
-      - run: echo ${{ steps.release.outputs.version }}
+      # First, set version of each package to the latest tagged so they are referenced correctly in dependencies.
+      - run: |
+          pnpm -r -c exec 'node ../../scripts/release/version.js'
+          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+        if: steps.release.outputs.version
 
       - run: pnpm version ${{ steps.release.outputs.version }} --no-git-tag-version
         working-directory: packages/${{ matrix.package }}
-        if: steps.release.outputs.version
-
-      # First, set version of each package to the latest tagged so they are referenced correctly in dependencies.
-      - run: pnpm -r -c exec 'node ../../scripts/release/version.js'
-        if: steps.release.outputs.version
-
-      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
         if: steps.release.outputs.version
 
       - run: pnpm publish --no-git-checks --access public --tag ${{ steps.release.outputs.channel }}
