ci(publish): update versioning

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,14 +54,10 @@ jobs:
         run: node ../../scripts/release/release.js
         working-directory: packages/${{ matrix.package }}
 
-      # First, set version of each package to the most recent so they are referenced correctly in dependencies.
+      # Set version of each package to the most recent so they are referenced correctly in dependencies.
       - run: |
           pnpm -r -c exec 'node ../../scripts/release/version.js'
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-        if: steps.release.outputs.version
-
-      - run: pnpm version ${{ steps.release.outputs.version }} --no-git-tag-version
-        working-directory: packages/${{ matrix.package }}
         if: steps.release.outputs.version
 
       - run: pnpm publish --no-git-checks --access public --tag ${{ steps.release.outputs.channel }}
