--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "prepublish": "$npm_execpath build",
     "compile": "hardhat compile",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "tsc --noEmit && tsc --build tsconfig.build.json",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
