--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -20,7 +20,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "keccak256": "^1.0.6"
+    "@noble/hashes": "^1.5.0"
   },
   "peerDependencies": {
     "@morpho-org/morpho-ts": "workspace:^"
