feat(playwright): add test sdk

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
           - test-viem
           - test-ethers
           - test-wagmi
+          - test-playwright
 
           - morpho-ts
           - morpho-test
