--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -10,7 +10,6 @@
     "url": "https://github.com/morpho-org/sdks/issues",
     "email": "contact@morpho.org"
   },
-  "type": "module",
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
@@ -32,12 +31,6 @@
   },
   "publishConfig": {
     "main": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "exports": {
-      ".": {
-        "types": "./lib/index.d.ts",
-        "default": "./lib/index.js"
-      }
-    }
+    "types": "lib/index.d.ts"
   }
 }
