--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -11,7 +11,6 @@
     "email": "contact@morpho.org"
   },
   "license": "MIT",
-  "type": "module",
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
@@ -35,12 +34,6 @@
   },
   "publishConfig": {
     "main": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "exports": {
-      ".": {
-        "types": "./lib/index.d.ts",
-        "default": "./lib/index.js"
-      }
-    }
+    "types": "lib/index.d.ts"
   }
 }
