--- a/packages/bundler-sdk-viem/package.json
+++ b/packages/bundler-sdk-viem/package.json
@@ -44,12 +44,6 @@
   },
   "publishConfig": {
     "main": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "exports": {
-      ".": {
-        "types": "./lib/index.d.ts",
-        "default": "./lib/index.js"
-      }
-    }
+    "types": "lib/index.d.ts"
   }
 }
