--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,8 @@ jobs:
 
           - simulation-sdk
           - simulation-sdk-wagmi
+
+          - bundler-sdk-ethers
           - bundler-sdk-viem
 
           - liquidation-sdk-viem
