--- a/packages/bundler-sdk-ethers/package.json
+++ b/packages/bundler-sdk-ethers/package.json
@@ -24,7 +24,7 @@
     "evm-maths": "^7.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
+    "@typechain/ethers-v6": "^0.5.1",
     "ethers": "^6.13.4",
     "hardhat": "^2.22.15",
     "typechain": "^8.3.2",
@@ -33,8 +33,5 @@
   "publishConfig": {
     "main": "lib/index.js",
     "types": "lib/index.d.ts"
-  },
-  "dependencies": {
-    "@typechain/ethers-v6": "^0.5.1"
   }
 }
