--- a/packages/bundler-sdk-viem/package.json
+++ b/packages/bundler-sdk-viem/package.json
@@ -11,6 +11,7 @@
     "email": "contact@morpho.org"
   },
   "license": "MIT",
+  "type": "module",
   "main": "src/index.ts",
   "files": ["lib"],
   "scripts": {
@@ -33,7 +34,10 @@
     "@morpho-org/simulation-sdk-wagmi": "workspace:^",
     "@morpho-org/test": "workspace:^",
     "@morpho-org/test-wagmi": "workspace:^",
+    "@tanstack/query-core": "^5.59.13",
+    "@tanstack/react-query": "^5.59.15",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/lodash": "^4.17.12",
     "lodash": "^4.17.21",
     "typescript": "^5.6.3",
