--- a/packages/simulation-sdk-wagmi/package.json
+++ b/packages/simulation-sdk-wagmi/package.json
@@ -42,6 +42,8 @@
     "@morpho-org/test-wagmi": "workspace:^",
     "@tanstack/query-core": "^5.59.13",
     "@tanstack/react-query": "^5.59.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/lodash": "^4.17.12",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
