--- a/packages/bundler-sdk-ethers/package.json
+++ b/packages/bundler-sdk-ethers/package.json
@@ -20,8 +20,7 @@
     "type": "typechain --target ethers-v6 --out-dir src/types/ abis/*.json"
   },
   "peerDependencies": {
-    "ethers": "^6.12.0",
-    "evm-maths": "^7.0.0"
+    "ethers": "^6.12.0"
   },
   "devDependencies": {
     "@typechain/ethers-v6": "^0.5.1",
