--- a/packages/blue-api-sdk/package.json
+++ b/packages/blue-api-sdk/package.json
@@ -22,6 +22,7 @@
     "@morpho-org/morpho-ts": "workspace:^"
   },
   "devDependencies": {
+    "@apollo/client": "^3.11.10",
     "@graphql-codegen/cli": "^5.0.3",
     "@graphql-codegen/typescript": "^4.1.2",
     "@morpho-org/blue-sdk": "workspace:^",
