--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
           - bundler-sdk-viem
 
           - liquidation-sdk-viem
+          - examples
 
     name: "@morpho-org/${{ matrix.package }}"
     runs-on: ubuntu-latest
