--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,7 @@
       "cache",
       "coverage",
       "artifacts",
+      "packages/examples/src/api/sdk.ts",
       "packages/liquidation-sdk-viem/src/api/sdk.ts"
     ]
   },
