--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@morpho-org/liquidation-sdk-viem",
-  "description": "Viem-based package that provides utilities to build viem-based liquidation bots on Morpho and examples using Flashbots and Morpho's GraphQL API.",
-  "version": "2.0.0",
+  "name": "@morpho-org/examples",
+  "version": "0.0.0",
   "author": "Morpho Association <contact@morpho.org>",
   "contributors": ["Rubilmax <rmilon@gmail.com>"],
   "repository": "github:morpho-org/sdks",
@@ -10,17 +9,12 @@
     "url": "https://github.com/morpho-org/sdks/issues",
     "email": "contact@morpho.org"
   },
-  "main": "src/index.ts",
-  "files": ["lib", "examples"],
   "scripts": {
     "prepublish": "$npm_execpath build",
-    "compile": "hardhat compile",
-    "build": "tsc --noEmit && tsc --build tsconfig.build.json",
+    "build": "tsc --build tsconfig.build.json",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@paraswap/sdk": "^7.0.0",
-    "executooor-viem": "^1.3.3",
     "graphql": "^16.9.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "2.11.0"
@@ -28,8 +22,9 @@
   "peerDependencies": {
     "@morpho-org/blue-api-sdk": "workspace:^",
     "@morpho-org/blue-sdk": "workspace:^",
+    "@morpho-org/blue-sdk-viem": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
-    "evm-maths": "^7.0.0",
+    "@morpho-org/simulation-sdk": "workspace:^",
     "viem": "^2.0.0"
   },
   "devDependencies": {
@@ -41,23 +36,15 @@
     "@morpho-org/blue-api-sdk": "workspace:^",
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/blue-sdk-viem": "workspace:^",
-    "@morpho-org/liquidation-sdk-viem": "workspace:^",
     "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
+    "@morpho-org/simulation-sdk": "workspace:^",
     "@morpho-org/test": "workspace:^",
     "@types/node": "^22.9.3",
-    "evm-maths": "^7.0.1",
-    "executooor-viem": "^1.3.3",
-    "fetch-mock": "^11.1.5",
-    "hardhat": "^2.22.16",
     "nock": "beta",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "viem": "^2.21.54",
     "vitest": "^2.1.8"
-  },
-  "publishConfig": {
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts"
   }
 }
