--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           - bundler-sdk-viem
 
           - liquidation-sdk-viem
-          - examples
+          - liquidity-sdk-viem
 
     name: "@morpho-org/${{ matrix.package }}"
     runs-on: ubuntu-latest
