--- a/packages/liquidity-sdk-viem/package.json
+++ b/packages/liquidity-sdk-viem/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@morpho-org/examples",
-  "version": "0.0.0",
+  "name": "@morpho-org/liquidity-sdk-viem",
+  "version": "2.0.0",
   "author": "Morpho Association <contact@morpho.org>",
   "contributors": ["Rubilmax <rmilon@gmail.com>"],
   "repository": "github:morpho-org/sdks",
@@ -9,12 +9,15 @@
     "url": "https://github.com/morpho-org/sdks/issues",
     "email": "contact@morpho.org"
   },
+  "main": "src/index.ts",
+  "files": ["lib"],
   "scripts": {
     "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "dataloader": "^2.2.3",
     "graphql": "^16.9.0",
     "graphql-request": "^6.1.0",
     "graphql-tag": "2.11.0"
@@ -46,5 +49,9 @@
     "typescript": "^5.7.2",
     "viem": "^2.21.54",
     "vitest": "^2.1.8"
+  },
+  "publishConfig": {
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts"
   }
 }
