--- a/biome.json
+++ b/biome.json
@@ -7,6 +7,7 @@
       "cache",
       "coverage",
       "artifacts",
+      "packages/bundler-sdk-ethers/src/types",
       "packages/liquidation-sdk-viem/src/api/sdk.ts",
       "packages/liquidity-sdk-viem/src/api/sdk.ts"
     ]
