--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,7 @@
       "artifacts",
       "packages/bundler-sdk-ethers/src/types",
       "packages/liquidation-sdk-viem/src/api/sdk.ts",
+      "packages/liquidity-sdk-ethers/src/api/sdk.ts",
       "packages/liquidity-sdk-viem/src/api/sdk.ts"
     ]
   },
