--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -17,11 +17,12 @@
     "prepublish": "$npm_execpath build",
     "build": "tsc --build tsconfig.build.json"
   },
+  "dependencies": {
+    "mutative": "^1.0.11"
+  },
   "peerDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
-    "@morpho-org/morpho-ts": "workspace:^",
-    "mutative": "^1.0.8",
-    "typescript": "^5.0.4"
+    "@morpho-org/morpho-ts": "workspace:^"
   },
   "devDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
@@ -30,7 +31,6 @@
     "@morpho-org/test": "workspace:^",
     "@types/lodash": "^4.17.12",
     "lodash": "^4.17.21",
-    "mutative": "^1.0.11",
     "typescript": "^5.7.2",
     "viem": "^2.21.54",
     "vitest": "^2.1.8"
