fix(package): move graphql to peer dependency

--- a/packages/liquidity-sdk-ethers/package.json
+++ b/packages/liquidity-sdk-ethers/package.json
@@ -18,10 +18,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "dataloader": "^2.2.3",
-    "graphql": "^16.9.0",
-    "graphql-request": "^6.1.0",
-    "graphql-tag": "2.11.0"
+    "dataloader": "^2.2.3"
   },
   "peerDependencies": {
     "@morpho-org/blue-api-sdk": "workspace:^",
@@ -29,7 +26,10 @@
     "@morpho-org/blue-sdk-ethers": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/simulation-sdk": "workspace:^",
-    "ethers": "^6.0.0"
+    "ethers": "^6.0.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "2.11.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.3",
