--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -20,16 +20,16 @@
   },
   "dependencies": {
     "@paraswap/sdk": "^7.0.0",
-    "executooor-viem": "^1.3.3",
-    "graphql": "^16.9.0",
-    "graphql-request": "^6.1.0",
-    "graphql-tag": "2.11.0"
+    "executooor-viem": "^1.3.3"
   },
   "peerDependencies": {
     "@morpho-org/blue-api-sdk": "workspace:^",
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "evm-maths": "^7.0.0",
+    "graphql": "^16.9.0",
+    "graphql-request": "^6.1.0",
+    "graphql-tag": "2.11.0",
     "viem": "^2.0.0"
   },
   "devDependencies": {
