--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -45,6 +45,7 @@
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/test": "workspace:^",
     "@types/node": "^22.9.3",
+    "dotenv": "^16.4.7",
     "evm-maths": "^7.0.1",
     "executooor-viem": "^1.3.3",
     "fetch-mock": "^11.1.5",
