--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@conventional-changelog/git-client": "^1.0.1",
     "@vitest/coverage-v8": "^2.1.8",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "conventional-changelog-writer": "^8.0.0",
