feat(bundler-sdk)!: add repository directory

--- a/packages/bundler-sdk-ethers/package.json
+++ b/packages/bundler-sdk-ethers/package.json
@@ -4,7 +4,11 @@
   "version": "2.0.0",
   "author": "Morpho Association <contact@morpho.org>",
   "contributors": ["Rubilmax <rmilon@gmail.com>"],
-  "repository": "github:morpho-org/sdks",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/morpho-org/sdks.git",
+    "directory": "packages/bundler-sdk-ethers"
+  },
   "homepage": "https://github.com/morpho-org/sdks",
   "bugs": {
     "url": "https://github.com/morpho-org/sdks/issues",
