ci(liquidation-sdk): disable logging in tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,4 @@ jobs:
       - run: pnpm run test --coverage
         env:
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
+          IS_LOGGING_DISABLED: true
