fix(ci): freeze lockfile
Signed-off-by: Julien THOMAS <61523188+julien-devatom@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
           node-version-file: .nvmrc
           cache: pnpm
 
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
 
       - run: pnpm --filter @morpho-org/${{ matrix.package }} build
