--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           cache: false
 
-      - run: pnpm install
+      - run: pnpm install --frozen-lockfile
 
       - run: pnpm run test --coverage
         env:
