--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: foundry-rs/foundry-toolchain@v1.2.0
         with:
           cache: false
+          version: stable
 
       - run: pnpm install --frozen-lockfile
 
