feat(hooks)!: expose errors, isFetching for useQueries
`useSimulationState` now automatically fetches markets of input vaults,
so the simulation state can be used to simulate vault deposits/withdrawals

BREAKING CHANGE:
- `error` returned by `useMarkets` (resp. `useUsers`, etc) is now a mapping indexed by market ids, (resp. user addresses, etc)
- `isFetching` returned by `useMarkets` (resp. `useUsers`, etc) is now a mapping indexed by market ids, (resp. user addresses, etc)
- `useMarkets`, `useUsers`, etc... now return `isFetchingAny`
- `useSimulationState` now propagates all of these in a SimulationState-like tree

--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
     "@morpho-org/blue-sdk-viem": "workspace:^",
+    "@morpho-org/morpho-test": "workspace:^",
     "@morpho-org/morpho-ts": "workspace:^",
     "@morpho-org/test": "workspace:^",
     "@morpho-org/test-wagmi": "workspace:^",
