--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,14 +62,13 @@ jobs:
       - run: |
           pnpm -r -c exec 'node ../../scripts/release/version.js'
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          echo "${{ steps.release.outputs.changelog }}" > CHANGELOG.md
         if: steps.release.outputs.version
 
       - run: pnpm publish --no-git-checks --access public --tag ${{ steps.release.outputs.channel }}
         working-directory: packages/${{ matrix.package }}
         if: steps.release.outputs.version
 
-      - run: gh release create ${{ steps.release.outputs.tag }} --target ${{ steps.release.outputs.branch }} --notes-file CHANGELOG.md --title '${{ steps.release.outputs.tag }}' ${{ steps.release.outputs.channel == 'latest' && '--latest' || '--prerelease' }}
+      - run: gh release create ${{ steps.release.outputs.tag }} --target ${{ steps.release.outputs.branch }} --notes-file packages/${{ matrix.package }}/CHANGELOG.md --title '${{ steps.release.outputs.tag }}' ${{ steps.release.outputs.channel == 'latest' && '--latest' || '--prerelease' }}
         if: steps.release.outputs.version
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
