--- a/packages/blue-sdk/package.json
+++ b/packages/blue-sdk/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@noble/hashes": "^1.6.1",
-    "@types/lodash": "^4.17.12",
-    "lodash": "^4.17.21"
+    "@types/lodash.isplainobject": "^4.0.9",
+    "@types/lodash.mergewith": "^4.6.9",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.mergewith": "^4.6.2"
   },
   "peerDependencies": {
     "@morpho-org/morpho-ts": "workspace:^"
