test(foundry): re-enable cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,16 +20,10 @@ jobs:
           node-version-file: .nvmrc
           cache: pnpm
 
-      # - name: Restore Foundry cache
-      #   uses: actions/cache/restore@v3
-      #   with:
-      #     path: ~/.foundry/cache/rpc
-      #     key: ${{ runner.os }}-foundry-chain-fork-${{ github.job }}-${{ github.sha }}
-      #     restore-keys: ${{ runner.os }}-foundry-chain-fork-${{ github.job }}-
-
       - uses: foundry-rs/foundry-toolchain@v1
         with:
-          cache: false
+          cache-key: ${{ runner.os }}-foundry-chain-fork-${{ github.job }}-${{ github.sha }}
+          cache-restore-keys: ${{ runner.os }}-foundry-chain-fork-${{ github.job }}-
 
       - run: pnpm install --frozen-lockfile
 
