test(vault-v2): add v2 simulation tests

--- a/packages/simulation-sdk/package.json
+++ b/packages/simulation-sdk/package.json
@@ -18,6 +18,8 @@
     "build": "tsc --noEmit && tsc --build tsconfig.build.json"
   },
   "dependencies": {
+    "@types/lodash.merge": "^4.6.9",
+    "lodash.merge": "^4.6.2",
     "mutative": "^1.1.0"
   },
   "peerDependencies": {
