chore(pnpm): approve builds

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,10 @@
 packages:
   - packages/*
+
 onlyBuiltDependencies:
+  - '@biomejs/biome'
   - bufferutil
+  - esbuild
+  - keccak
   - secp256k1
   - utf-8-validate
