ci(publish): update npm auth

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,6 +49,9 @@ jobs:
         with:
           node-version-file: .nvmrc
           cache: pnpm
+          registry-url: https://registry.npmjs.org
+          scope: "@morpho-org"
+          always-auth: true
 
       - run: pnpm install --frozen-lockfile
 
