--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,6 +7,10 @@ on:
     tags-ignore:
       - '**'
 
+permissions:
+  id-token: write
+  contents: read
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.event_name }}
   cancel-in-progress: true
