chore(deps): update sha.js to version 2.4.12 and add pnpm overrides

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "pnpm": {
+    "overrides": {
+      "sha.js": "2.4.12"
+    }
+  },
   "name": "@morpho-org/sdks",
   "version": "0.0.0",
   "description": "Collection of SDKs to ease interactions with the Morpho protocol and Morpho Vaults",
