--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@conventional-changelog/git-client": "^2.0.0",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/ui": "^3.0.5",
+    "@types/node": "^24.10.2",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
     "conventional-changelog-conventionalcommits": "^8.0.0",
     "conventional-changelog-writer": "^8.0.1",
     "conventional-recommended-bump": "^11.0.0",
