--- a/packages/liquidation-sdk-viem/package.json
+++ b/packages/liquidation-sdk-viem/package.json
@@ -19,7 +19,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@paraswap/sdk": "^7.2.3",
+    "@velora-dex/sdk": "^9.2.0",
     "executooor-viem": "^1.3.3"
   },
   "peerDependencies": {
