--- a/packages/blue-sdk-wagmi/package.json
+++ b/packages/blue-sdk-wagmi/package.json
@@ -25,7 +25,7 @@
     "@tanstack/react-query": "^5.0.0",
     "react": "^18.0.0",
     "viem": "^2.0.0",
-    "wagmi": "^2.12.10"
+    "wagmi": ">=2.12.10 <4.0.0"
   },
   "devDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
