--- a/packages/simulation-sdk-wagmi/package.json
+++ b/packages/simulation-sdk-wagmi/package.json
@@ -29,7 +29,7 @@
     "react": "^18.0.0",
     "typescript": "^5.0.4",
     "viem": "^2.0.0",
-    "wagmi": "^2.12.10"
+    "wagmi": ">=2.12.10 <4.0.0"
   },
   "devDependencies": {
     "@morpho-org/blue-sdk": "workspace:^",
