--- a/package.json
+++ b/package.json
@@ -40,13 +40,19 @@
     "dotenv-cli": "^8.0.0",
     "happy-dom": "^20.0.11",
     "husky": "^9.1.7",
-    "js-yaml": ">=4.1.1",
     "lint-staged": "^15.4.3",
     "semver": "^7.7.1",
     "typescript": "^5.9.3",
     "undici": ">=5.29.0",
     "viem": "^2.41.2",
     "vitest": "^4.0.15"
+  },
+  "pnpm": {
+    "overrides": {
+      "axios": ">=1.12.0",
+      "js-yaml": ">=4.1.1",
+      "undici": ">=5.29.0"
+    }
   },
   "lint-staged": {
     "*.{json,gql}": "biome check --write --no-errors-on-unmatched",
